Compiling lint with JDK11 requires tools.jar
This adds tools.jar from JDK8 to test compile classpath
for lint-tests. Also, JVM flag is used to make tests run
on JDK11.

Bug: n/a
Test: build&test with Gradle
Change-Id: Iee64906721ac499b446e665b6c0597420b440313